--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@style/splashTheme">
             <intent-filter>
